@@ -1,10 +1,20 @@
 # Targeted-Heart-Rates
-
-# Instructions;
+###### Jawad Haider
+## Instructions;
 12.9 (Target-Heart-Rate Calculator App) While exercising, you can use a heart-rate monitor to see that your heart rate stays within a safe range suggested by 
 your trainers and doctors. According to the American Heart Association (AHA), the formula for calculating your maximum heart rate in beats per minute is 220 
 minus your age in years (http://bit.ly/AHATargetHeartRates).Your target heart rate is a range that is 50–85% of your maximum heart rate.
 
+## Software Requirements:
+1. Scene Builder installation
+[Official site](https://gluonhq.com/products/scene-builder/) to download Scene Builder.
+
+2. [Official site](https://openjfx.io/) of JavaFX where you can find official documentation as well as download links.
+Step-by-step [instructions] (https://openjfx.io/openjfx-docs/) on how to install and run JavaFX applications.
+
+=> --module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml
+
+## ScreenShots
 # My Heart Rates Below :) 
 ![](img/Screenshot%20from%202020-12-21%2013-01-06.png)
 
